[gd_scene load_steps=2 format=3 uid="uid://dvpr3owc7ewor"]

[ext_resource type="Script" path="res://addons/frame_data_properties/main_panel.gd" id="1_5pog5"]

[node name="MainPanel" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1_5pog5")

[node name="CharacterSelect" type="Control" parent="."]
layout_mode = 2

[node name="Col" type="VBoxContainer" parent="CharacterSelect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.5
offset_top = -33.0
offset_right = 65.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 85

[node name="CharacterOptions" type="OptionButton" parent="CharacterSelect/Col"]
layout_mode = 2
item_count = 4
selected = 0
popup/item_0/text = "Ciel"
popup/item_0/id = 0
popup/item_1/text = "SSJ4 Goku"
popup/item_1/id = 1
popup/item_2/text = "Ciel"
popup/item_2/id = 2
popup/item_3/text = "SSJ4 Goku"
popup/item_3/id = 3

[node name="LoadCharacter" type="Button" parent="CharacterSelect/Col"]
layout_mode = 2
text = "Load Properties"

[node name="CharacterEditor" type="Control" parent="."]
visible = false
layout_mode = 2

[node name="Row" type="HBoxContainer" parent="CharacterEditor"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 400

[node name="CharacterSlot" type="CenterContainer" parent="CharacterEditor/Row"]
layout_mode = 2

[node name="Col" type="VBoxContainer" parent="CharacterEditor/Row"]
layout_mode = 2

[node name="Animations" type="OptionButton" parent="CharacterEditor/Row/Col"]
layout_mode = 2

[node name="Frame" type="OptionButton" parent="CharacterEditor/Row/Col"]
layout_mode = 2

[connection signal="item_selected" from="CharacterSelect/Col/CharacterOptions" to="." method="_on_character_selected"]
[connection signal="pressed" from="CharacterSelect/Col/LoadCharacter" to="." method="load_character"]
